payment iframe on mobile css fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -273,7 +273,8 @@ label.required:after {
     }
     .payment-fix {
       position: absolute;
-      left: 0px;
+      left: 2%;
+      width: 96%;
     }
 }
 
